--- a/task.html
+++ b/task.html
@@ -10,13 +10,15 @@
     <div class="container">
         <div class="content">
             <h1 class="heading">Currency Converter</h1>
-            <label for="amount">Enter Amount</label>
-            <input 
-                type="text"
-                placeholder="100"
-                class="amount-input"
-                id="amount"
+            <div class="current-amount">
+                <label for="amount">Enter Amount</label>
+                <input 
+                    type="text"
+                    placeholder="100"
+                    class="amount-input"
+                    id="amount"
                 />
+            </div>
             <div class="dropdown-container">
                 <select>
                     <option>Select Value</option>
@@ -29,7 +31,7 @@
             <button class="convert-button">
                 Convert
             </button>
-            <p>100USD = 8350.24 INR</p>
+            <p class="result">100USD = 8350.24 INR</p>
         </div>
     </div>
     <script src="./task.js"></script>
