Placeholder added for select dropdown

--- a/task.html
+++ b/task.html
@@ -21,7 +21,7 @@
             </div>
             <div class="dropdown-container">
                 <select>
-                    <option>Select Value</option>
+                    <option value="" disabled selected>Select Value</option>
                 </select>
                 <p>TO</p>
                 <select>
