changed class to id

--- a/task.html
+++ b/task.html
@@ -20,11 +20,11 @@
                 />
             </div>
             <div class="dropdown-container">
-                <select class="dropdown">
+                <select class="dropdown" id="list1">
                     <option value="" disabled selected>Select Country</option>
                 </select>
                 <p>TO</p>
-                <select class="dropdown">
+                <select class="dropdown" id="list2">
                     <option>Select Country</option>
                 </select>
             </div>
