--- a/task.html
+++ b/task.html
@@ -23,7 +23,7 @@
             <div class="dropdown-container">
                 <select class="dropdown" id="list1">
                 </select>
-                <p>TO</p>
+                <p style="padding-inline: 12px;">TO</p>
                 <select class="dropdown" id="list2">
                 </select>
             </div>
@@ -32,7 +32,7 @@
                     Convert
                 </button>
             </div>
-            <div id="result">100USD = 8350.24 INR</div>
+            <div id="result"></div>
             <div id="error"></div>
         </div>
     </div>
